[metadata]
name = utils
version = 0.0.1
author = Ricardo Fernandes
author_email = pdgrickerp@gmail.com
description = "Rickerp's python utils"
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/rickerp/python-utils

[options]
python_requires = >=3.8

[options.extras_require]
alembic = 
    alembic
    pydantic
    sqlalchemy
database = 
    sqlalchemy
    pydantic
database-sqlmodel =
    sqlmodel
    sqlalchemy
    pydantic
django = django
security =
    python-jose
    passlib
    bcrypt
